<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.vcu.eythirteenapp.AlarmEditActivity">


    <android.support.design.widget.NavigationView
        android:id="@+id/editAlarmNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/alarm_edit_activity_title"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/editAlarmNavBarDivider2"
                app:layout_constraintStart_toEndOf="@+id/editAlarmNavBarDivider1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/cancelButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickCancel"
                android:text="@string/cancel_button_text"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickSave"
                android:text="@string/save_button_text"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/editAlarmNavBarDivider1"
                android:layout_width="8dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancelButton"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/editAlarmNavBarDivider2"
                android:layout_width="8dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveButton"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </android.support.design.widget.NavigationView>

    <ScrollView
        android:layout_above="@id/deleteButton"
        android:layout_below="@id/editAlarmNavigationBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerHorizontal"
            android:dividerPadding="12dp"
            android:showDividers="beginning|middle|end"
            android:shrinkColumns="3"
            android:stretchColumns="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/timeText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/editAlarmTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4" />

                <ImageView
                    android:id="@+id/timeEditImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/timeEditImageViewDesc"
                    android:onClick="onClickTimeEdit"
                    android:src="@android:drawable/ic_menu_edit" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/labelText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/editAlarmLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4"
                    android:ellipsize="end" />

                <ImageView
                    android:id="@+id/labelEditImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/editLabelImageViewDesc"
                    android:onClick="onClickLabelEdit"
                    android:src="@android:drawable/ic_menu_edit" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/volume"
                    android:textSize="18sp" />

                <SeekBar
                    android:id="@+id/VolumeControl"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_span="5" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <Switch
                    android:id="@+id/repeatEnabledSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onClickRepeatSwitch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repeatDaysText"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/editAlarmRepeatDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_span="4"
                    android:ellipsize="end" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/repeatDaysEditImageViewDesc"
                    android:src="@android:drawable/ic_menu_edit" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/difficulty"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <CheckBox
                    android:id="@+id/easyCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="start"
                    android:onClick="onClickCheckBox"
                    android:text="@string/easy"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <CheckBox
                    android:id="@+id/mediumCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/medium"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <CheckBox
                    android:id="@+id/hardCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_gravity="center"
                    android:onClick="onClickCheckBox"
                    android:text="@string/hard"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/tone"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <TextView
                    android:id="@+id/alarmTone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="4" />

                <ImageView
                    android:id="@+id/toneEditButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/toneEditButtonDesc"
                    android:onClick="onClickToneEdit"
                    android:src="@android:drawable/ic_menu_edit" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="6"
                    android:text="@string/snoozeEnabled"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Switch
                    android:id="@+id/snoozeEnabledSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onClickSnoozeSwitch" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="6"
                    android:text="@string/expressionsEnabled"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Switch
                    android:id="@+id/expressionEnabledSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:onClick="onClickExpressionSwitch" />

            </TableRow>


        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/deleteButton"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickDelete"
        android:text="@string/delete_button_text"
        android:textColor="@android:color/holo_red_dark" />


</RelativeLayout>
