<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/alarmID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/alarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/alarmEnabledSwitch"
        android:text="@string/alarmTime"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/background_light" />


    <TextView
        android:id="@+id/alarmLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarmTime"
        android:layout_marginTop="5dp"
        android:text="@string/alarmLabel"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/alarmRepeatDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/alarmLabel"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/alarmLabel"
        android:layout_marginStart="5dp"
        android:text="@string/alarmRepeatDays"
        android:textColor="@android:color/background_light" />

    <Switch
        android:id="@+id/alarmEnabledSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
