...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mainNavBarDivider2"
                app:layout_constraintStart_toEndOf="@+id/mainNavBarDivider1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/editButton"
                style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickEdit"
                android:text="@string/edit_button_text"
                android:textAlignment="center"
...
